# ergo

./: .clang-format  CMakeLists.txt  ergo-config.cmake
include/ergo/: assert.hh  memory.hh  path.hh  types.hh
src/: memory.cc  path.cc
test/: CMakeLists.txt  test.cc
